testsuite/tests/typecheck/should_run/T10284.stderr
T10284: Uncaught exception ghc-internal:GHC.Internal.Control.Exception.Base.TypeError:

T10284.hs:7:5: error: [GHC-83865]
    • Couldn't match expected type ‘Int’ with actual type ‘Char’
    • In the expression: 'a'
      In an equation for ‘a’: a = 'a'
(deferred type error)

HasCallStack backtrace:
  collectExceptionAnnotation, called at libraries/ghc-internal/src/GHC/Internal/Exception.hs:169:13 in ghc-internal:GHC.Internal.Exception
  toExceptionWithBacktrace, called at libraries/ghc-internal/src/GHC/Internal/Exception.hs:89:42 in ghc-internal:GHC.Internal.Exception
  throw, called at libraries/ghc-internal/src/GHC/Internal/Control/Exception/Base.hs:435:30 in ghc-internal:GHC.Internal.Control.Exception.Base

